--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -37,13 +37,14 @@ body {
 	/*font-size: 1em;*/
 }
 .bio > p {
-	margin-top: 10px;
+	margin-top: 1em;
 	line-height: 1.5em;
 	font-size: 1em;
 	font-weight: 100;
 }
 .bioextra {
-	/*display: inline-block;*/
+	display: inline-block;
+	margin-right: 1rem;
 	color: rgba(136,153,165,0.9);
 }
 i {
@@ -82,7 +83,6 @@ i {
 }
 .section-scrolling {
 	margin-top: 2rem;
-	padding-left: 1rem;
 }
 .section-header {
 	padding: 0px 1rem;
@@ -94,7 +94,7 @@ i {
 .tiled-list {
 	width: 100%;
 	display: grid;
-	grid-template-columns: minmax(96px, 1fr) minmax(96px, 1fr) minmax(96px, 1fr);
+	grid-template-columns: minmax(90px, 1fr) minmax(90px, 1fr) minmax(90px, 1fr);
 	grid-template-rows: auto;
 	grid-gap: 10px;
 	font-size: 0px;
@@ -117,6 +117,14 @@ i {
 	border-color: rgba(0, 146, 148);
 	flex: 0 0 auto;	
 }
+.first-card {
+	margin-left: 1rem;
+}
+.last-card {
+	width: 1px;
+	height: 1px;
+	border-width: 0px;	
+}
 .card-tiled-list {
 	display: grid;
 	grid-template-columns: minmax(96px, 1fr) minmax(96px, 1fr);
@@ -132,13 +140,6 @@ i {
 	border-radius: 5px;
 }
 /*ends scrolling container with some padding*/
-.last-card {
-	width: 1px;
-	height: 1px;
-	margin: 0px;
-	padding: 0px;
-	border-width: 0px;
-}
 h1 {
 	margin-top: 3rem;
 	margin-bottom: 0;
@@ -154,7 +155,8 @@ h2 {
 	font-size: 1.5em;
 }
 h4 {
-	margin-bottom: 5px;
+	margin-top: 5px;
+	margin-bottom: 10px;
 	font-size: 1em;
-	font-weight: bold;
+	font-weight: lighter;
 }
