--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -21,6 +21,9 @@ body {
 #main {
 	grid-area: main;
 }
+#sidebar {
+	grid-area: sidebar;
+}
 #footer {
 	grid-area: footer;
 }
@@ -31,6 +34,7 @@ body {
 	grid-template-areas: 
 		"header"
 		"main"
+		"sidebar"
 		"footer";
 }
 .main-grid-layout {
@@ -48,6 +52,10 @@ body {
 }
 .section-scrolling {
 	margin-top: 2rem;
+}
+.section-sidebar {
+	margin-top: 2rem;
+	padding: 0px 1rem;	
 }
 .bio {
 	margin-top: .5rem;
@@ -137,6 +145,25 @@ i {
 	width: 100%;
 	border-radius: 5px;
 }
+.stack-list-container {
+	display: grid;
+	grid-template-columns: 35px 1fr;
+	grid-template-rows: auto;
+	grid-gap: .5rem;
+}
+.stack-list-item > a {
+	/*display: block;*/
+}
+.stack-icon {
+	width: 100%;
+	/*background: blue;*/
+}
+.stack-icon-image {
+	width: 100%;
+	/*clip-path: circle(50% at center);*/
+	border-radius: 50%;
+}
+
 h1 {
 	margin-top: 1rem;
 	margin-bottom: 2rem;
@@ -149,6 +176,11 @@ h2 {
 	margin-bottom: .5rem;
 	width: 100%;
 	font-size: 1.5em;
+}
+h3 {
+	margin-bottom: .5rem;
+	font-size: 1em;
+	font-weight: bold;
 }
 h4 {
 	margin-top: 5px;
