--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -30,43 +30,76 @@ a:focus {
 }
 #sidebar {
 	grid-area: sidebar;
-	display: grid;
-	grid-template-columns: minmax(320px, 480px);
-	grid-template-rows: auto;
-	/*background-color: blue;*/
 }
 #footer {
 	grid-area: footer;
 }
 .page-grid {
 	display: grid;
-	grid-template-columns: 1fr minmax(320px, 480px) 1fr;
+	grid-template-columns: minmax(1rem, 1fr) minmax(320px, 450px) minmax(1rem, 1fr);
 	grid-template-rows: auto;
+	grid-row-gap: 3rem;
 	grid-template-areas: 
 		". header ."
 		". main ."
 		". sidebar ."
 		". footer .";
 }
-.main-grid-layout {
-/*	display: grid;*/
+.grid-main {
+	width: 100%;
+	display: grid;
+	grid-template-columns: minmax(320px, 450px);/*not sure yet*/
+	grid-template-rows: auto;
+	grid-gap: 2rem;
+}
+@media (max-width: 480px) {
+	.page-grid {
+		display: grid;
+		grid-template-columns: minmax(1rem, 1fr) minmax(320px, 450px) minmax(1rem, 1fr);
+		grid-template-rows: auto;
+		grid-row-gap: 2rem;
+		grid-template-areas: 
+			". header ."
+			". main ."
+			". sidebar ."
+			". footer .";
+	}
+}
+@media (min-width: 768px) {
+	.page-grid {
+		display: grid;
+		width: 100%;
+		grid-template-columns: 1fr 280px minmax(360px, 450px) 1fr;
+		/*grid-template-rows: 1;*/
+		grid-column-gap: 3rem;
+		grid-template-areas: 
+			". header main ."
+			". header sidebar ."
+			". header footer .";
+	}
+}
+@media (min-width: 900px) {
+	.page-grid {
+		display: grid;
+		width: 100%;
+		grid-template-columns: 1fr minmax(280px, 450px) 450px 1fr;
+		/*grid-template-rows: 1;*/
+		grid-column-gap: 4rem;
+		grid-template-areas: 
+			". header main ."
+			". header sidebar ."
+			". header footer .";
+	}
 }
 .section-header {
-	padding: 0px 1rem;
+	/*padding: 0px 1rem;*/
 	margin-top: 1rem;
 	font-size: 1em;
 	font-weight: 100;	
 }
-.section-main {
-	margin-top: 2rem;
-	padding: 0px 1rem;
-}
-.section-scrolling {
-	margin-top: 2rem;
-}
 .section-sidebar {
-	margin-top: 2rem;
-	padding: 0px 1rem;	
+	/*margin-top: 2rem;
+	padding: 0px 1rem;	*/
 }
 .bio {
 	margin-top: .5rem;
@@ -135,7 +168,7 @@ i {
 	flex: 0 0 auto;	
 }
 .first-card {
-	margin-left: 1rem;
+	/*margin-left: 1rem;*/
 }
 .last-card {
 	width: 1px;
@@ -160,7 +193,7 @@ i {
 }
 .thumbnail {
 	width: 100%;
-	/*border-radius: 5px;*/
+	border-radius: 5px;
 }
 .stack-list-container {
 	display: grid;
@@ -196,15 +229,16 @@ i {
 h1 {
 	margin-top: 1rem;
 	margin-bottom: 2rem;
-	padding: 0px 1rem;
+	/*padding: 0px 1rem;*/
 	/*text-align: center;*/
 	font-size: 1.5em;
-	font-weight: 100;
+	font-weight: lighter;
 }
 h2 { 
-	margin-bottom: 1rem;
 	width: 100%;
+	margin-bottom: 1.5rem;
 	font-size: 1.5em;
+	font-weight: lighter;
 }
 h3 {
 	margin-bottom: 1rem;
