--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -138,7 +138,7 @@ a:focus {
 @media (min-width: 1100px) {
 	.page-grid {
 		display: grid;
-		grid-template-columns: 1fr minmax(250px, 300px) minmax(480px, 540px) minmax(min-content, 300px) 1fr;
+		grid-template-columns: 1fr minmax(250px, 300px) minmax(480px, 540px) minmax(250px, 300px) 1fr;
 		grid-template-rows: auto;
 		grid-row-gap: 3rem;
 		grid-template-areas: 
@@ -251,30 +251,33 @@ i {
 }
 .stack-list-container {
 	display: grid;
-	grid-template-columns: 30px 1fr;
+	grid-template-columns: 1fr;
 	grid-template-rows: auto;
 	grid-row-gap: 1rem;
-	grid-column-gap: .5rem;
 }
 .stack-item {
-	align-self: center;	
+	width: 100%;
+	/*padding-top: 1rem;*/
+	/*padding-bottom: 1rem;*/
+	/*border-top: 1px;*/
+	/*border-bottom: 1px;*/
+	/*border-style: solid;*/
+	/*border-color: rgb(0, 146, 148);*/
 }
-
-.stack-link > a {
+.stack-heading {
+	font-size: 1em;
+	font-weight: bold;
+}
+.stack-link {
+	display: block;
 	text-decoration: none;
 	color: white;
 	font-weight: lighter;
 }
-.stack-icon {
-	width: 100%;
-}
-.stack-icon > a {
-	display: block;
-	text-decoration: none;
-}
-.stack-icon-image {
-	width: 100%;
-	/*clip-path: circle(50% at center);*/
+.stack-image {
+	width: 30px;
+	margin-right: 5px;
+	vertical-align: middle;
 	border-radius: 50%;
 }
 
@@ -291,11 +294,6 @@ h2 {
 	margin-bottom: 1.5rem;
 	font-size: 1.5em;
 	font-weight: lighter;
-}
-h3 {
-	margin-bottom: 1rem;
-	font-size: 1em;
-	font-weight: bold;
 }
 h4 {
 	margin-top: 5px;
