--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -44,7 +44,7 @@ a:focus {
 
 .page-grid {
 	display: grid;
-	grid-template-columns: 460px;
+	grid-template-columns:minmax(300px, 500px);
 	grid-template-rows: auto;
 	grid-row-gap: 1rem;
 	grid-column-gap: 40px;
@@ -55,9 +55,6 @@ a:focus {
 		"main"
 		"sidebar"
 		"footer";
-}
-.page-item {
-	/*place-self: center;*/
 }
 .grid-header {
 	width: 100%;
@@ -72,7 +69,7 @@ a:focus {
 .grid-main {
 	width: 100%;
 	display: grid;
-	grid-template-columns: minmax(320px, 460px);/*not sure yet*/
+	grid-template-columns: minmax(300px, 500px);
 	grid-template-rows: auto;
 	grid-gap: 2rem;
 }
@@ -97,7 +94,7 @@ a:focus {
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 }
-@media (min-width: 700px) {
+@media (min-width: 540px) {
 	.page-grid {
 		display: grid;
 		grid-template-columns: 1fr minmax(320px, 540px) 1fr;
@@ -155,7 +152,7 @@ a:focus {
 		font-size: 0px;
 	}		
 }
-@media (min-width: 1100px) {
+@media (min-width: 1120px) {
 	.page-grid {
 		display: grid;
 		grid-template-columns: 1fr minmax(250px, 300px) minmax(480px, 540px) minmax(250px, 300px) 1fr;
@@ -183,6 +180,7 @@ a:focus {
 	}		
 }
 .tab-container { 
+	width: 100%;
 	display: flex;
 	flex-wrap: nowrap;
 	overflow-x: auto;
@@ -307,6 +305,7 @@ i {
 	display: block;
 	text-decoration: none;
 	color: white;
+	/*font-size: 1em;*/	
 	font-weight: lighter;
 }
 .stack-image {
@@ -317,10 +316,6 @@ i {
 }
 
 h1 {
-	/*margin-top: 1rem;*/
-	/*margin-bottom: 2rem;*/
-	/*padding: 0px 1rem;*/
-	/*text-align: center;*/
 	font-size: 1.5em;
 	font-weight: lighter;
 }
@@ -340,11 +335,8 @@ h4 {
 #name{font-weight: 900;}
 .page-header {
 	align-self: center;
-	/*line-height: 0;*/
 	margin: 0;
 	width: 100%;
-	/*padding-top: 1rem;*/
-	/*padding-bottom: 1rem;*/
 	padding-left: 10px;
 	padding-right: 10px;
 	/*background-color: blue;*/
