--- a/assets/styles/stylesheet.css
+++ b/assets/styles/stylesheet.css
@@ -214,7 +214,8 @@ a:focus {
 .bioextra {
 	display: inline-block;
 	margin-top: 1em;
-	line-height: 1.5rem;	
+	line-height: 1.5rem;
+	/*letter-spacing: 1px;*/
 	margin-right: .5em;
 	color: rgba(136,153,165,0.9);
 }
@@ -261,7 +262,6 @@ i {
 	display: inline-block;  
 	border-style: solid;
 	border-width: 1px;
-	border-color: #009294;
 	border-radius: 10px;
 	border-color: rgba(0, 146, 148);
 	flex: 0 0 auto;	
@@ -302,17 +302,18 @@ i {
 	/*border-top: 1px;*/
 	border-bottom: 1px;
 	border-style: solid;
-	border-color: rgba(0, 146, 148);
+	border-color: rgba(136,153,165,0.3) /*rgba(0, 146, 148);*/
 }
 .box-list-tiem:first-of-type {
 	border-top: 1px;
-	border-bottom: 1px;
+	/*border-bottom: 1px;*/
 	border-style: solid;
-	border-color: rgba(0, 146, 148);	
+	border-color: rgba(136,153,165,0.3) /*rgba(0, 146, 148);*/
 }
 .song-anime {
 	display: block;
-	color: rgba(0, 146, 148);
+	color: rgba(0, 146, 148); /*#FC8F58;*/
+
 }
 .box-list-header {
 	display: block;
@@ -335,17 +336,17 @@ i {
 }
 .stack-item {
 	width: 100%;
-	padding-top: .5rem;
-	padding-bottom: .5rem;
+	padding-top: 1rem;
+	padding-bottom: 1rem;
 	padding-left: 10px;
 	padding-right: 10px;
 	border-top: 1px;
 	border-style: solid;
-	border-color: #21202A;
+	border-color: rgba(136,153,165,0.3); /*#21202A*/
 }
 .stack-heading {
-	padding-top: .5rem;
-	padding-bottom: .5rem;	
+	padding-top: 1rem;
+	padding-bottom: 1rem;	
 	padding-left: 10px;
 	padding-right: 10px;
 	font-size: 1em;
@@ -370,7 +371,7 @@ h1 {
 }
 h2 { 
 	width: 100%;
-	margin-bottom: 1.5rem;
+	margin-bottom: 1rem;
 	font-size: 1.5em;
 	font-weight: lighter;
 }
